--- a/package.json
+++ b/package.json
@@ -1,12 +1,75 @@
 {
-  "name": "whatsapp-bot",
-  "version": "1.0.0",
-  "description": "",
+  "name": "WhatsApp Bot Lexa ",
+  "version": "0.4.3",
+  "description": "WhatsApp Bot using Baileys",
   "main": "main.js",
+  "directories": {
+    "lib": "library"
+  },
+    "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mrfzvx12/whatsapp-bot.git"
+  },
+  "keywords": [
+    "WhatsApp",
+    "WhatsApp-bot",
+    "Baileys",
+    "WhatsApp-web"
+  ],
+  "dependencies": {
+    "@adiwajshing/baileys": "^3.5.0",
+    "@vitalets/google-translate-api": "^7.0.0",
+    "async": "^2.4.1",
+    "awesome-phonenumber": "^2.48.0",
+    "axios": "^0.21.1",
+    "brainly-scraper": "^1.0.3",
+    "brainly-scraper-v2": "^2.0.4-1",
+    "browser-id3-writer": "^4.4.0",
+    "cfonts": "^2.9.0",
+    "color": "^4.0.0",
+    "child_process": "^1.0.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
+    "emoji-api": "^1.0.2",
+    "express": "^4.17.1",
+    "fake-useragent": "^1.0.1",
+    "figlet": "^1.5.0",
+    "file-type": "^16.3.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "form-data": "^4.0.0",
+    "fs-extra": "^10.0.0",
+    "g-i-s": "^2.1.6",
+    "google-it": "^1.6.2",
+    "got": "^11.8.2",
+    "image-to-base64": "^2.2.0",
+    "insta-fetcher": "^1.2.3",
+    "jsdom": "^16.5.2",
+    "moment-timezone": "^0.5.33",
+    "multistream": "^4.1.0",
+    "ms": "^2.1.3",
+    "node-fetch": "^2.6.1",
+    "node-tesseract-ocr": "^2.2.1",
+    "parse-ms": "^2.1.0",
+    "pdfkit": "^0.12.3",
+    "performance-now": "^2.1.0",
+    "qrcode": "^1.4.4",
+    "qrcode-terminal": "^0.12.0",
+    "qs": "^6.10.1",
+    "request": "^2.88.2",
+    "similarity": "^1.2.1",
+    "scraper-instagram": "^1.0.17",
+    "spinnies": "^0.5.1",
+    "tiktok-scraper-without-watermark": "^1.0.6",
+    "yt-search": "^2.7.6"
+  },
   "scripts": {
+    "start": "node start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "mrfzvx12",
-  "license": "MIT license"
+  "author": "Ma'ruf",
+  "license": "MIT license",
+  "bugs": {
+    "url": "https://github.com/mrfzvx12/whatsapp-bot/issues"
+  },
+  "homepage": "https://github.com/mrfzvx12/whatsapp-bot/"
 }
