--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
+
   "name": "whatsapp-bot",
+
   "version": "0.0.5",
   "description": "WhatsApp Bot using Baileys",
   "main": "main.js",
   "directories": {
     "lib": "library"
   },
-    "repository": {
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/mrfzvx12/whatsapp-bot.git"
   },
   "dependencies": {
     "@adiwajshing/baileys": "^3.5.0",
+    "@iamtraction/google-translate": "^1.1.2",
     "@vitalets/google-translate-api": "^7.0.0",
     "async": "^2.4.1",
     "awesome-phonenumber": "^2.48.0",
@@ -20,8 +23,8 @@
     "brainly-scraper-v2": "^2.0.4-1",
     "browser-id3-writer": "^4.4.0",
     "cfonts": "^2.9.0",
-    "color": "^4.0.0",
     "child_process": "^1.0.2",
+    "color": "^4.0.0",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "emoji-api": "^1.0.2",
@@ -39,22 +42,22 @@
     "insta-fetcher": "^1.2.3",
     "jsdom": "^16.5.2",
     "moment-timezone": "^0.5.33",
-    "multistream": "^4.1.0",
     "ms": "^2.1.3",
+    "multistream": "^4.1.0",
     "node-fetch": "^2.6.1",
     "node-tesseract-ocr": "^2.2.1",
     "parse-ms": "^2.1.0",
     "pdfkit": "^0.12.3",
     "performance-now": "^2.1.0",
-    "qrcode": "^1.4.4",
+    "qrcode": "^1.3.2",
     "qrcode-terminal": "^0.12.0",
     "qs": "^6.10.1",
     "request": "^2.88.2",
-    "similarity": "^1.2.1",
     "scraper-instagram": "^1.0.17",
-    "spinnies": "^0.5.1",
+    "similarity": "^1.2.1",
+    "spinnies": "^0.3.2",
     "tiktok-scraper-without-watermark": "^1.0.6",
-    "yt-search": "^2.7.6"
+    "yt-search": "^2.10.2"
   },
   "scripts": {
     "start": "node start.js",
