--- a/app.json
+++ b/app.json
@@ -2,5 +2,10 @@
   "name": "whatsapp-bot",
   "description": "WhatsApp Bot using Baileys",
   "repository": "https://github.com/mrfzvx12/whatsapp-bot",
-  "logo": "https://node-js-sample.herokuapp.com/node.png"
+  "logo": "https://node-js-sample.herokuapp.com/node.png",
+  "buildpacks": [{
+    "url": "https://github.com/DuckyTeam/heroku-buildpack-imagemagick"
+  }, {
+    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+  }]
 }
